--- a/pom.xml
+++ b/pom.xml
@@ -368,6 +368,19 @@
 				<artifactId>tomcat-maven-plugin</artifactId>
 				<version>1.0-beta-1</version>
 			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<url>http://10.100.199.101:8000/manager/text</url>
+					<server>tomcat8_vy</server>
+					<username>admin</username>
+					<password>password</password>
+				</configuration>
+			</plugin>
+			
 		</plugins>
 	</build>
 </project>
