--- a/pom.xml
+++ b/pom.xml
@@ -369,7 +369,7 @@
 				<version>1.0-beta-1</version>
 			</plugin>
 			
-			<!--<plugin>
+			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.2</version>
@@ -379,7 +379,7 @@
 					<username>admin</username>
 					<password>password</password>
 				</configuration>
-			</plugin>-->
+			</plugin>
 			
 		</plugins>
 	</build>
