--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,19 @@
 		<org.springframework.roo-version>1.0.2.RELEASE</org.springframework.roo-version>
 		<org.aspectj-version>1.8.5</org.aspectj-version>
 		<org.slf4j-version>1.5.10</org.slf4j-version>
+		
+		<!-- INSTANCE_CONNECTION_NAME from Cloud Console > SQL > 
+		Instance Details > Properties or gcloud sql instances describe <instance>
+     project:region:instance for Cloud SQL 2nd Generation or
+     project:instance        for Cloud SQL 1st Generation
+		-->
+    <INSTANCE_CONNECTION_NAME>idyllic-folio-202010:us-central1:oms</INSTANCE_CONNECTION_NAME>
+    <user>xander.artamonov</user>
+    <password>password</password>
+    <database>mydb</database>
+
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
 	</properties>
 	<dependencies>
 		<!-- Spring -->
@@ -227,6 +240,20 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+		
+		<dependency> <!-- Only used locally -->
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.42</version>  <!-- v5.x.x is for production, v6.x.x EAP X DevAPI -->
+		</dependency>
+		
+		<dependency>
+			<groupId>com.google.cloud.sql</groupId>
+			<!-- If using MySQL 6.x driver, use mysql-socket-factory-connector-j-6 instead -->
+			<artifactId>mysql-socket-factory</artifactId>
+			<version>1.0.5</version>
+		</dependency>
+		
 	</dependencies>
 	<repositories>
 		<!-- For testing against latest Spring snapshots -->
